- Fixed the homepage text misalignment while resizing

--- a/1. Netflix Clone/css/netflix-style.css
+++ b/1. Netflix Clone/css/netflix-style.css
@@ -15,10 +15,11 @@
   }
 
   .header-top {
+    position: relative;
     display: flex;
     align-items: self-start;
     justify-content: center;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(images/netflix-background-home.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../images/netflix-background-home.jpg);
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -55,7 +56,7 @@
     font-family: 'Lato', sans-serif;
     position: relative;
     width: 100%;
-    max-width: 100%;  
+    max-width: 100%;
     margin: 0 120px;
     font-family: 'Poppins', sans-serif;
   }
@@ -73,9 +74,9 @@
 
   }
 
-  div > .text-content > .big-text{
+  div>.text-content>.big-text {
     font-size: 3rem;
-    font-weight:bolder;
+    font-weight: bolder;
   }
 
   .homepage-text {
@@ -85,9 +86,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    bottom: 10vh;
     width: 100%;
-    z-index: 10;
+    margin: 10%;
   }
 
   .homepage-text>h2,
@@ -152,19 +152,19 @@
       height: fit-content;
     }
 
-    div > .text-content > .big-text{
+    div>.text-content>.big-text {
       font-size: 2rem;
       font-weight: 700;
     }
 
-    .top-navigation{
+    .top-navigation {
       margin: 0 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
 
-    .top-right-navigation{
+    .top-right-navigation {
       gap: 10px;
     }
 
@@ -172,7 +172,9 @@
       font-size: 15px;
     }
 
-    .sign-in, .email-class, .mail-list>button {
+    .sign-in,
+    .email-class,
+    .mail-list>button {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -182,7 +184,7 @@
       align-items: center;
     }
 
-    .mail-list>button{
+    .mail-list>button {
       margin: 10px;
     }
   }
